syntax = "proto3";

package BevyEditor.Proto;

service BevyEditorService {
	rpc MoveCube(.BevyEditor.Proto.AxisX) returns (.BevyEditor.Proto.VoidResult);
}

message VoidResult{}

message AxisX{int32 newValue = 1;}